--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
-  }
+}
+
 
 /* apply styles to <header> */
+
 header {
+    display: flex;
+    flex-wrap: wrap;
     padding: 20px 35px;
+    justify-content: space-between;
     background-color: #39a6b2;
 }
 
@@ -21,7 +26,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
 
 header a {
@@ -30,7 +34,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
@@ -71,7 +74,9 @@ section {
     padding: 60px;
 }
 
+
 /* Hero Style Start */
+
 .hero {
     background-image: url("../images/hero-bg.jpeg");
     height: 600px;
@@ -79,6 +84,8 @@ section {
     background-position: center;
     position: relative;
 }
+
+
 /* Hero Style End */
 
 .hero-form {
@@ -122,6 +129,8 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+
+
 /* HERO STYLES END*/
 
 .intro {
@@ -134,29 +143,30 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-  }
+}
 
 .steps {
     text-align: center;
     background: #fce138;
-  }
+}
 
 .section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
 }
 
 .primary-border {
-  border-color: #fce138;
+    border-color: #fce138;
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+    border-color: #39a6b2;
 }
+
 .steps div {
     margin-bottom: 80px;
 }
@@ -179,7 +189,7 @@ section {
 
 .steps span {
     font-size: 38px;
-  }
+}
 
 .trainers {
     text-align: center;
@@ -192,6 +202,7 @@ section {
     color: #fce138;
     overflow: auto;
 }
+
 .trainer img {
     width: 35%;
     float: left;
@@ -214,33 +225,35 @@ section {
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
-  }
-  
+}
+
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 26px;
     margin-bottom: 25px;
-  }
-  
+}
+
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
-  }  
- 
-  /* REACH OUT STYLES START */
+}
+
+
+/* REACH OUT STYLES START */
+
 .contact {
     text-align: center;
     background: #024e76;
-  }
+}
 
 .contact h2 {
     color: #fce138;
-  }
+}
 
 .contact-info iframe {
     width: 400px;
     height: 400px;
-  }
+}
 
 .contact-info div {
     width: 410px;
@@ -249,23 +262,24 @@ section {
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
-  }
+}
 
 .contact-info h3 {
     color: #fce138;
     font-size: 32px;
-  }
-  
-.contact-info p, .contact-info address {
+}
+
+.contact-info p,
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
-  }
-  
+}
+
 .contact-info a {
     color: #fce138;
-  }
-  
+}
+
+
 /* REACH OUT STYLES END */
-  
