--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,30 +152,27 @@ section {
 
 /* HERO STYLES END*/
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -210,9 +207,7 @@ section {
     font-size: 38px;
 }
 
-.trainers {
-    text-align: center;
-}
+.trainers {}
 
 .trainer {
     width: 900px;
@@ -261,7 +256,6 @@ section {
 /* REACH OUT STYLES START */
 
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -298,6 +292,10 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
 
 
