--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,30 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 
-/* apply styles to <header> */
+/* HEADER / NAV BAR STYLES START */
 
 header {
-    display: flex;
-    flex-wrap: wrap;
     padding: 20px 35px;
-    justify-content: space-between;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
 }
 
 header a {
@@ -51,13 +50,19 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
+
+/* HEADER / NAVBAR STYLES END */
+
+
+/* FOOTER STYLES START */
+
 footer {
+    background: #fce138;
+    padding: 40px 35px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fce138;
     width: 100%;
-    padding: 40px 35px;
 }
 
 footer h2 {
@@ -72,23 +77,29 @@ footer div {
 }
 
 footer a {
-    color: 024e76;
+    color: #024e76;
 }
+
+
+/* END FOOTER STYLES */
+
+
+/* STYLE ALL SECTION TAGS */
 
 section {
     padding: 60px;
 }
 
 
-/* Hero Style Start */
+/* HERO STYLES START */
 
 .hero {
-    background-image: url("../images/hero-bg.jpeg");
+    background-image: url('../images/hero-bg.jpeg');
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    background-size: cover;
-    background-position: center;
 }
 
 .hero-cta {
@@ -106,21 +117,18 @@ section {
     color: #fce138;
 }
 
-
-/* Hero Style End */
-
 .hero-form {
+    border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
     color: #024e76;
-    border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
 }
 
 .hero-form h3 {
     font-size: 24px;
-    margin: o;
+    margin: 0;
 }
 
 .hero-form p {
@@ -150,25 +158,15 @@ section {
 }
 
 
-/* HERO STYLES END*/
+/* HERO STYLES END */
 
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
 
-.steps {
-    background: #fce138;
-}
+/* SECTION TITLE STYLES START */
 
 .section-title {
     font-size: 55px;
-    color: #024e76;
     border-bottom: 3px solid;
+    color: #024e76;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -181,6 +179,31 @@ section {
 
 .secondary-border {
     border-color: #39a6b2;
+}
+
+
+/* SECTION TITLE STYLES END */
+
+
+/* WHAT WE DO STYLES */
+
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
+}
+
+
+/* WHAT YOU DO STYLES END */
+
+
+/* WHAT YOU DO STYLES START */
+
+.steps {
+    background: #fce138;
 }
 
 .step {
@@ -231,50 +254,52 @@ section {
     color: #024e76;
 }
 
-.trainers {}
+
+/* WHAT YOU DO STYLES END */
+
+
+/* MEET THE TRAINERS START */
+
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
+    flex: 1;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
+    padding: 25px;
+    line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
+
+
+/* TRAINER STYLES END */
 
 
 /* REACH OUT STYLES START */
@@ -287,17 +312,22 @@ section {
     color: #fce138;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info>* {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact-info iframe {
-    width: 400px;
     height: 400px;
 }
 
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 
@@ -310,17 +340,50 @@ section {
 .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
+}
+
+.contact-form input,
+.contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 
 .contact-info a {
     color: #fce138;
 }
 
+
+/* REACH OUT STYLES END */
+
+
+/* UTILITIES */
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 .flex-row {
     display: flex;
 }
-
-
-/* REACH OUT STYLES END */
